# custom-llm

./: .gitignore  AGENTS.md  SKILLS.md  migrate.py  migrate_cp.sh  migrate_data.sh  migrate_gentle.py  migrate_rsync.sh  migrate_rsync_v2.sh  pyproject.toml  requirements.txt
docs/: MODAL_TRAINING.md
scripts/: analyze_model.py  chat.py  chat_ui.py  check_decoding.py  check_vocab_dupes.py  cleanup_checkpoints.py  dashboard.py  init_db.py  inspect_data.py  inspect_philpapers.py  inspect_vocab.py  modal_train.py  prepare_data.py  repair_checkpoint.py  start_training.py  start_training_native.py  temporal_worker.py  train.py  verify_tokenizer_fix.py  visualize_gradient_flow.py
specs/: Future_Training_Improvements.md  Spec.md  Training_Datasets.md  Training_Steps.md
src/: __init__.py
src/evaluation/: __init__.py  evaluate.py
src/model/: __init__.py  attention.py  config.py  embeddings.py  llm.py  mlp.py  transformer.py
src/tokenizer/: __init__.py  tokenizer.py
src/training/: __init__.py  metrics_logger.py  trainer.py
src/workflows/: __init__.py  activities.py  core.py  native_orchestrator.py  state_db.py  training_workflow.py
tests/: __init__.py  conftest.py  reproduce_logging_flow.py  test_attention.py  test_checkpoint_cleanup.py  test_checkpoint_resume.py  test_clean.py  test_config.py  test_core.py  test_dataloader.py  test_embeddings.py  test_initialization.py  test_llm.py  test_mlp.py  test_orchestrator.py  test_state_db.py  test_training.py  test_transformer.py
ui/: app.js  index.html  style.css
