[project]
name = "custom-llm"
version = "0.1.0"
description = "60M parameter LLM trained from scratch on Apple Silicon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "datasets>=2.14.0",
    "tokenizers>=0.15.0",
    "huggingface-hub>=0.19.0",
    "transformers>=4.36.0",  # For Adafactor optimizer
    "tqdm>=4.66.0",
    "numpy>=1.24.0",
    "tensorboard>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
